# SocialRobotUpdate

./: 6-dimensions-for-website-2015-08-16.xls  CrossRef_DataFrame.csv  CrossRef_DataFrame.xlsx  CrossRef_DataFrame_wAnno.xlsx  CrossRef_DataFrame_wAnno_socedu.csv  CrossRef_DataFrame_wAnno_socedu.xlsx  ISSUE_GUIDELINE.md  Main.ipynb  Quantitative_Bib.ipynb  README.md  README.rst  ResearchTrends-SocialR4L-W_JOHAL.docx  ResearchTrends-SocialR4L-W_JOHAL2-AR.docx  Robots_ABOT_HumanLikeness.csv  SocialRobotEducationUpdates_final-Axa’s MacBook Pro-2.docx  SocialRobotEducationUpdates_final-Axa’s MacBook Pro-3.docx  SocialRobotEducationUpdates_final-Axa’s MacBook Pro-4.docx  SocialRobotEducationUpdates_final-Axa’s MacBook Pro-5.docx  SocialRobotEducationUpdates_final-Axa’s MacBook Pro-6.docx  SocialRobotEducationUpdates_final-Axa’s MacBook Pro.docx  Untitled.ipynb  Update Meta analysis of robots for learning literature (Science Robotics).xlsx  Viz.ipynb  annotated_cross_ref-Axa’s MacBook Pro.xlsx  annotated_cross_ref.xlsx  five_lastY.xlsx  primar.csv  primar.xlsx  pyproject.toml  requirements.txt  social_robot4learning.xlsx  social_robot4learning_b.xlsx  streamlit_app.py
.github/ISSUE_TEMPLATE/: add-paper.md
.ipynb_checkpoints/: Quantitative_Bib-checkpoint.ipynb  Viz-checkpoint.ipynb
tests/: test_1.py
